test/Failing/WildcardVar.pi
module WildcardVar where

data Unit : Type 1 :=
  unit : Unit

id : Unit -> Unit
id = \_ . _